# cdatastructures

./: .gitignore  README.md
LinkedLists/: CMakeLists.txt  README.md  findops.c  linkedlist.c  list.h  listops.c  main.c  sortops.c  splitops.c
LinkedLists/list/: CMakeLists.txt  duplicateops.c  linkedlist.c  list.h  listops.c  mergeops.c  palindrome.c  reverseops.c
LinkedLists/tests/: CMakeLists.txt  test_palindrome.cpp  test_remove_duplicates.cpp
SortingAlgos/: CMakeLists.txt  heapsort.c  insertionsort.c  main.c  mergesort.c  selectionsort.c  sortingalgos.c  sortingalgos.h
SortingAlgos/algos/: CMakeLists.txt  insertionsort.c  quicksort.c  selectionsort.c
SortingAlgos/tests/: CMakeLists.txt  test_heap_sort.cpp  test_insertion_sort.cpp  test_merge_sort.cpp  test_quick_sort.cpp  test_selection_sort.cpp
